<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/assignment_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".PatientDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:src="@drawable/college_logo"
            android:contentDescription="@string/collegelogo"
            />
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/person_circle"
            android:contentDescription="@string/personIcon"
            />
        <TextView
            android:id="@+id/patientIDTextViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/enterpatientID" />
        <TextView
            android:id="@+id/patientFirstNameTextViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/enterfirstname" />
        <TextView
            android:id="@+id/patientLastNameTextViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/enterlastname" />
        <TextView
            android:id="@+id/patientDepartmentTextViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/enterdepartment" />
        <TextView
            android:id="@+id/patientNurseTextViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/patientnurse" />
        <TextView
            android:id="@+id/patientRoomTextViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/enterroomnumber" />
        <Button
            android:id="@+id/updatePatientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/updatepatientbutton"
            android:textColor="#666666"
            android:padding="8dp"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="580dp"
            />

        <Button
            android:id="@+id/addPatientTestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:text="@string/addpatienttestbutton"
            android:textColor="#666666"
            android:padding="8dp"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="580dp"
            />

        <Button
            android:id="@+id/viewPatientTestsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:text="@string/viewpatienttestsbutton"
            android:textColor="#666666"
            android:padding="8dp"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="580dp"
            />

        <Button
            android:id="@+id/returnToPatientMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:text="@string/backtopatientmenubutton"
            android:textColor="#666666"
            android:padding="8dp"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="580dp"
            />

    </LinearLayout>

</RelativeLayout>
