<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/assignment_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="140dp"
            android:src="@drawable/college_logo"
            android:contentDescription="@string/collegelogo"
            />
        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="42dp"
            android:src="@drawable/nurse"
            android:contentDescription="@string/personIcon"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="313dp"
            />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:backgroundTint="@color/offwhite"
            android:text="@string/loginbuttonlabel"
            android:textColor="@color/gray"
            android:padding="18dp"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="580dp"
            />
        <Button
            android:id="@+id/registerButton"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/offwhite"
            android:text="@string/registerbuttonlabel"
            android:textColor="@color/gray"
            android:padding="18dp"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="580dp"
            />
    </LinearLayout>
</RelativeLayout>