<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/assignment_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="260dp"
            android:layout_height="130dp"
            android:src="@drawable/college_logo"
            android:contentDescription="@string/collegelogo"
            />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/personIcon"
            android:src="@drawable/user_injured_svgrepo_com"
            tools:ignore="ImageContrastCheck" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/patientRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:visibility="visible" />
        <Button
            android:id="@+id/addPatientButton"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/offwhite"
            android:text="@string/addpatientbutton"
            android:textColor="@color/gray"
            android:padding="12dp"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="580dp"
            />
        <Button
            android:id="@+id/viewPatientButton"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/offwhite"
            android:text="@string/viewpatientbutton"
            android:textColor="@color/gray"
            android:padding="12dp"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="580dp"
            />
    </LinearLayout>
</RelativeLayout>